# uvws

./: pyproject.toml
scripts/: release-package.sh
